--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Diet Goal Simulator</title>
+    <title>Diet Goal Simulator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -69,7 +69,7 @@
 <body class="p-4 md:p-8">
     <div class="max-w-7xl mx-auto">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-slate-800 mb-2">高度ダイエット・シミュレーター</h1>
+            <h1 class="text-3xl font-bold text-slate-800 mb-2">ダイエット・シミュレーター</h1>
             <p class="text-slate-600 text-sm">設定値・実測データのリアルタイム保存モデル</p>
         </header>
 
@@ -135,10 +135,25 @@
                         </button>
                     </div>
 
+                    <!-- 1日平均目標表示 -->
                     <div id="calorieResult" class="mt-6 p-4 bg-orange-50 rounded-lg border border-orange-100 hidden">
-                        <h3 class="text-orange-800 font-bold text-sm mb-1 text-center">🔥 1日平均目標</h3>
+                        <h3 class="text-orange-800 font-bold text-sm mb-1 text-center">🔥 1日平均目標（不足分）</h3>
                         <div id="dailyCalorie" class="text-2xl font-black text-orange-600 text-center">-0 kcal</div>
                         <p id="calorieNote" class="text-[10px] text-orange-500 mt-2 leading-tight text-center"></p>
+                    </div>
+
+                    <!-- 基礎代謝表示 -->
+                    <div id="bmrResult" class="mt-4 p-4 bg-blue-50 rounded-lg border border-blue-100">
+                        <h3 class="text-blue-800 font-bold text-sm mb-1 text-center">💤 推定基礎代謝</h3>
+                        <div id="bmrValue" class="text-2xl font-black text-blue-600 text-center">0 kcal</div>
+                        <p id="bmrNote" class="text-[10px] text-blue-500 mt-2 leading-tight text-center">※最新の実測値または予測値から計算</p>
+                    </div>
+
+                    <!-- 運動消費表示 -->
+                    <div id="exerciseResult" class="mt-4 p-4 bg-emerald-50 rounded-lg border border-emerald-100">
+                        <h3 class="text-emerald-800 font-bold text-sm mb-1 text-center">🏃 運動消費目標</h3>
+                        <div class="text-2xl font-black text-emerald-600 text-center">200 kcal</div>
+                        <p class="text-[10px] text-emerald-500 mt-2 leading-tight text-center">※1日あたりの有酸素・筋トレ等の平均消費</p>
                     </div>
                 </div>
             </div>
@@ -147,35 +162,17 @@
             <div class="w-full lg:w-2/3 xl:w-3/4 space-y-8">
                 <!-- グラフエリア -->
                 <div class="card p-6">
-                    <div class="flex justify-between items-center mb-4">
+                    <div class="flex flex-wrap justify-between items-center mb-4 gap-4">
                         <h2 class="text-xl font-semibold text-slate-700">予測 vs 実績推移</h2>
-                        <div class="flex gap-2">
-                            <span class="flex items-center text-[10px] text-slate-400"><span class="w-3 h-1 bg-blue-600 mr-1"></span>予測</span>
-                            <span class="flex items-center text-[10px] text-slate-400"><span class="w-3 h-1 bg-emerald-500 mr-1"></span>実績</span>
+                        <div class="flex flex-wrap gap-4">
+                            <span class="flex items-center text-[10px] text-slate-400 font-bold"><span class="w-3 border-t-2 border-dashed border-sky-400 mr-1"></span>予測体重</span>
+                            <span class="flex items-center text-[10px] text-slate-400 font-bold"><span class="w-3 border-t-2 border-sky-400 mr-1"></span>実測体重</span>
+                            <span class="flex items-center text-[10px] text-slate-400 font-bold"><span class="w-3 border-t-2 border-dashed border-yellow-400 mr-1"></span>予測BF%</span>
+                            <span class="flex items-center text-[10px] text-slate-400 font-bold"><span class="w-3 border-t-2 border-yellow-400 mr-1"></span>実測BF%</span>
                         </div>
                     </div>
                     <div class="relative h-64 md:h-80 lg:h-96">
                         <canvas id="dietChart"></canvas>
-                    </div>
-                </div>
-
-                <!-- AI 分析セクション -->
-                <div class="card p-6 border-l-8 border-indigo-500">
-                    <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-4">
-                        <div class="flex items-center">
-                            <span class="text-2xl mr-3">✨</span>
-                            <div>
-                                <h3 class="font-bold text-slate-800">AI 進捗分析 & アドバイス</h3>
-                                <p class="text-xs text-slate-400">実績データから停滞期の回避策を提案</p>
-                            </div>
-                        </div>
-                        <button id="aiAnalyzeBtn" class="px-6 py-2 bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-bold rounded-lg transition shadow-md flex items-center gap-2">
-                            分析を実行
-                            <span id="aiLoading" class="hidden animate-spin h-3 w-3 border-2 border-white border-t-transparent rounded-full"></span>
-                        </button>
-                    </div>
-                    <div id="adviceText" class="text-slate-600 text-sm leading-relaxed p-4 bg-slate-50 rounded-lg min-h-[50px]">
-                        実績を入力して「分析を実行」を押してください。
                     </div>
                 </div>
 
@@ -217,7 +214,6 @@
     </div>
 
     <script>
-        const apiKey = ""; 
         let chart = null;
         const KCAL_PER_KG = 7200;
         const START_DATE = new Date();
@@ -287,6 +283,11 @@
             calculate();
         }
 
+        function calculateBMR(weight, bfPercent) {
+            const lbm = weight * (1 - (bfPercent / 100));
+            return Math.round(370 + (21.6 * lbm));
+        }
+
         function calculate() {
             if (typeof Chart === 'undefined') return;
 
@@ -308,6 +309,9 @@
                 totalWeightUsed += efficiency;
             }
 
+            let latestAvailableWeight = currentW;
+            let latestAvailableBF = currentBF;
+
             for (let i = 0; i <= weeks; i++) {
                 let weight, lbm, fatKg;
                 if (i === 0) {
@@ -327,6 +331,14 @@
                 rowDate.setDate(START_DATE.getDate() + (i * 7));
                 const risk = i === 0 ? 0 : Math.min(100, (i / weeks * 50) + (adaptationSensitivity * 50));
 
+                const actualW = actualData[i]?.w;
+                const actualBF = actualData[i]?.bf;
+
+                if (actualW !== undefined && actualW !== null) {
+                    latestAvailableWeight = actualW;
+                    latestAvailableBF = (actualBF !== undefined && actualBF !== null) ? actualBF : bfPercent;
+                }
+
                 data.push({
                     date: `${rowDate.getMonth() + 1}/${rowDate.getDate()}`,
                     week: i,
@@ -334,10 +346,13 @@
                     bfPercent: Math.max(0, bfPercent).toFixed(1),
                     lbm: lbm.toFixed(1),
                     risk: Math.round(risk),
-                    actualWeight: actualData[i]?.w || null,
-                    actualBF: actualData[i]?.bf || null
+                    actualWeight: actualW || null,
+                    actualBF: actualBF || null
                 });
             }
+
+            const currentBMR = calculateBMR(latestAvailableWeight, latestAvailableBF);
+            document.getElementById('bmrValue').innerText = `${currentBMR.toLocaleString()} kcal`;
 
             updateTable(data);
             updateChart(data);
@@ -351,10 +366,9 @@
 
             const totalKcal = loss * KCAL_PER_KG;
             const avgDaily = totalKcal / (weeks * 7);
-            const peakDaily = avgDaily * (1 + (0.2 * sensitivity));
 
             document.getElementById('dailyCalorie').innerText = `-${Math.round(avgDaily).toLocaleString()} kcal`;
-            document.getElementById('calorieNote').innerText = `※停滞期には最大 -${Math.round(peakDaily).toLocaleString()}kcal 相当の調整が必要です。`;
+            document.getElementById('calorieNote').innerText = `※消費からこれだけのカロリーを毎日削る必要があります。`;
         }
 
         window.saveActualRow = function(week) {
@@ -385,8 +399,8 @@
                 tr.innerHTML = `
                     <td class="py-3 px-2 text-slate-400 font-mono text-xs">${row.date}</td>
                     <td class="py-3 px-2 text-slate-600">${row.week === 0 ? '開始' : row.week + '週'}</td>
-                    <td class="py-3 px-2 font-bold text-blue-700 border-l">${row.weight} <span class="text-[10px] font-normal text-slate-300">kg</span></td>
-                    <td class="py-3 px-2 font-semibold text-pink-500">${row.bfPercent} <span class="text-[10px] font-normal text-slate-300">%</span></td>
+                    <td class="py-3 px-2 font-bold text-sky-500 border-l">${row.weight} <span class="text-[10px] font-normal text-slate-300">kg</span></td>
+                    <td class="py-3 px-2 font-semibold text-yellow-500">${row.bfPercent} <span class="text-[10px] font-normal text-slate-300">%</span></td>
                     <td class="py-3 px-2 border-l bg-emerald-50">
                         <input type="number" step="0.1" id="actualWeight_${row.week}" class="input-actual" value="${row.actualWeight || ''}" placeholder="--">
                     </td>
@@ -406,6 +420,10 @@
             const ctx = document.getElementById('dietChart').getContext('2d');
             if (chart) chart.destroy();
 
+            // 共通カラー設定
+            const weightColor = '#38bdf8'; // 水色
+            const bfColor = '#facc15';     // 黄色
+
             chart = new Chart(ctx, {
                 type: 'line',
                 data: {
@@ -414,57 +432,68 @@
                         {
                             label: '予測体重',
                             data: data.map(d => d.weight),
-                            borderColor: '#2563eb',
-                            backgroundColor: 'rgba(37, 99, 235, 0.05)',
-                            fill: true, yAxisID: 'y', tension: 0.3, pointRadius: 0
+                            borderColor: weightColor,
+                            backgroundColor: 'rgba(56, 189, 248, 0.05)',
+                            fill: true, yAxisID: 'y', tension: 0.3, pointRadius: 0,
+                            borderDash: [5, 5] // 点線
                         },
                         {
                             label: '実測体重',
                             data: data.map(d => d.actualWeight),
-                            borderColor: '#10b981',
-                            backgroundColor: '#10b981',
-                            pointRadius: 4, showLine: true, yAxisID: 'y', spanGaps: true
+                            borderColor: weightColor,
+                            backgroundColor: weightColor,
+                            pointRadius: 1.5, // 極小サイズ
+                            pointHoverRadius: 3,
+                            showLine: true, yAxisID: 'y', spanGaps: true,
+                            borderWidth: 2.5 // 線を少し強調
                         },
                         {
                             label: '予測BF%',
                             data: data.map(d => d.bfPercent),
-                            borderColor: '#db2777',
-                            borderDash: [5, 5], yAxisID: 'yBF', tension: 0.3, pointRadius: 0
+                            borderColor: bfColor,
+                            borderDash: [5, 5], // 点線
+                            yAxisID: 'yBF', tension: 0.3, pointRadius: 0
+                        },
+                        {
+                            label: '実測BF%',
+                            data: data.map(d => d.actualBF),
+                            borderColor: bfColor,
+                            backgroundColor: bfColor,
+                            pointRadius: 1.5, // 極小サイズ
+                            pointHoverRadius: 3,
+                            showLine: true, yAxisID: 'yBF', spanGaps: true,
+                            borderWidth: 2 // 線を少し強調
                         }
                     ]
                 },
                 options: {
                     responsive: true, maintainAspectRatio: false,
                     interaction: { mode: 'index', intersect: false },
-                    plugins: { legend: { position: 'top', labels: { boxWidth: 12, font: { size: 10 } } } },
+                    plugins: { 
+                        legend: { 
+                            position: 'top', 
+                            labels: { 
+                                boxWidth: 30,
+                                font: { size: 10, weight: 'bold' },
+                                usePointStyle: false 
+                            } 
+                        } 
+                    },
                     scales: {
-                        y: { type: 'linear', position: 'left' },
-                        yBF: { type: 'linear', position: 'right', grid: { drawOnChartArea: false } }
+                        y: { 
+                            type: 'linear', 
+                            position: 'left',
+                            title: { display: true, text: '体重 (kg)', font: { size: 10 } }
+                        },
+                        yBF: { 
+                            type: 'linear', 
+                            position: 'right', 
+                            grid: { drawOnChartArea: false },
+                            title: { display: true, text: '体脂肪率 (%)', font: { size: 10 } }
+                        }
                     }
                 }
             });
-        }
-
-        async function analyzeAI() {
-            const btn = document.getElementById('aiAnalyzeBtn');
-            const loader = document.getElementById('aiLoading');
-            const adviceBox = document.getElementById('adviceText');
-
-            btn.disabled = true; loader.classList.remove('hidden'); adviceBox.innerText = "分析中...";
-
-            try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ contents: [{ parts: [{ text: `ダイエットデータ分析アドバイス(日本語150文字): 設定=${JSON.stringify(settingsData)}, 実績=${JSON.stringify(actualData)}` }] }] })
-                });
-                const result = await response.json();
-                adviceBox.innerText = result.candidates?.[0]?.content?.parts?.[0]?.text || "分析に失敗しました。";
-            } catch (err) {
-                adviceBox.innerText = "エラーが発生しました。";
-            } finally {
-                btn.disabled = false; loader.classList.add('hidden');
-            }
         }
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -479,8 +508,6 @@
             document.getElementById('manualSaveBtn').addEventListener('click', () => {
                 saveAllSettings(); showToast("設定を保存しました");
             });
-
-            document.getElementById('aiAnalyzeBtn').addEventListener('click', analyzeAI);
 
             document.getElementById('resetSettingsBtn').addEventListener('click', () => {
                 if(confirm('リセットしますか？')) {
